--- a/dziubson.html
+++ b/dziubson.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello huberciku</h1>
-    <a href="/dziubson.html">Siema dziubi</a>
+    <h1>Tutaj dziubson</h1>
 </body>
 </html>
