--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello huberciku</h1>
     <a href="/dziubson.html">Siema dziubi</a>
+    <a href="/tabela.php">Siema dziubi</a>
 </body>
 </html>
